Fix overflow on job title

--- a/app/styles/app/layouts/jobs.scss
+++ b/app/styles/app/layouts/jobs.scss
@@ -171,6 +171,11 @@
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
+
+    &:after {
+      @include fadeOut(right, -90deg, white);
+      top: -1px;
+    }
   }
 }
 
