--- a/app/styles/app/mixins.scss
+++ b/app/styles/app/mixins.scss
@@ -49,6 +49,7 @@
 @mixin colorFadeOut($status, $color) {
   @media #{$medium-up} {
     &.#{$status}:hover {
+      .job-title,
       .job-lang,
       .job-env {
         &:after {
@@ -56,6 +57,7 @@
         }
       }
 
+      .job-title:hover,
       .job-lang:hover,
       .job-env:hover {
         overflow: visible;
